# click-through-rate

./: .env.example  .gitignore  .pre-commit-config.yaml  click-through-rate.code-workspace  ctr_pipeline.yaml  kfp_client_manager.py  main.py  pyproject.toml  test_kfp_client_manager.py  wine_kfp.py
src/click_through_rate/: __init__.py  configs.py  constants.py  enums.py  main.py  resources.py  schemas.py
src/click_through_rate/assets/: create_database.py
src/click_through_rate/components/: download_data.py  settings.py  settings_models.py
src/click_through_rate/log/: logging_config.json  logging_configs.py  project_logger.py
src/click_through_rate/log/filters/: stderr_filter.py  stdout_filter.py
src/click_through_rate/log/formatters/: json_formatter.py
src/click_through_rate/utils/: kfp.py
tests/test_click_through_rate/: conftest.py  settings.json  test_main.py
tests/test_click_through_rate/resources/: create_schemas.py  create_test_database.py  data_providers.py  utils.py
tests/test_click_through_rate/resources/schemas/en/: d_apps.json  d_devices.json  d_sites.json  f_interactions.json  train_devices_main.json  train_devices_other.json
tests/test_click_through_rate/test_components/: test_download_data.py  test_settings.py  test_settings_models.py
tests/test_click_through_rate/test_logging/: conftest.py  test_project_logger.py
tests/test_click_through_rate/test_logging/test_filters/: test_stderr_filter.py  test_stdout_filter.py
