[project]
name = "click-through-rate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jean Dos Santos", email = "jeandsantos88@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
    "feature-engine>=1.8.3",
    "google-cloud-storage>=2.19.0",
    "ibis-framework[duckdb,polars]>=9.5.0",
    "imbalanced-learn>=0.13.0",
    "kfp>=2.11.0",
    "numpy>=2.2.2",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "tenacity>=9.0.0",
    "urllib3>=1.26.20",
]

[project.scripts]
click-through-rate = "click_through_rate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "faker>=35.0.0",
    "isort>=5.13.2",
    "mimesis>=18.0.0",
    "pre-commit>=4.1.0",
    "pre-commit-hooks>=5.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]
debug = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]


[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra"
]
testpaths = "tests"

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "bugs: tests that reproduce issues",
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
    "smoke: quick test of major parts",
]


[tool.ruff]

line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "PL",   # pylint
    "C",    # convention
    "R",    # refactor
    "RUF",  # ruff
    "PERF", # performance

]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public nested class
    "D102", # Missing docstring in public class
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D106", # Missing docstring in public nested module
    "D107", # Missing docstring in __init__
    "D401", # First line should be in imperative mood
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
